added logo and lang for nav

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,10 @@
 {
     "nav": {
-        "home": "Home"
-    }
+        "home": "Home",
+        "products": "Products",
+        "services": "Services",
+        "about": "About Us",
+        "contact": "Contact"
+    },
+    "header": {}
 }
