--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,10 @@
 {
     "nav": {
-        "home": "Главная"
-    }
+        "home": "Главная",
+        "products": "Продукты",
+        "services": "Сервисы",
+        "about": "О нас",
+        "contact": "Контакт"
+    },
+    "header": {}
 }
