--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,5 +6,11 @@
         "about": "О нас",
         "contact": "Контакт"
     },
-    "header": {}
+    "header": {
+        "title": "Идеальное качество <br /> <highlight>для вашего дома</highlight>",
+        "subtitle": "Бренд Mr Romchi предлагает вам самые современные и качественные двери и рамы. Доверяйте свой дом надежным рукам.",
+        "premium": "Премиальные рамы и двери",
+        "catalog": "Посмотреть каталог",
+        "contact": "Связаться"
+    }
 }
