--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -12,5 +12,45 @@
         "premium": "Премиальные рамы и двери",
         "catalog": "Посмотреть каталог",
         "contact": "Связаться"
+    },
+    "products": {
+        "pvx": "ПВХ Профили",
+        "alumin": "Алюминиевые Профили",
+        "sliding": "Раздвижные Профили",
+        "fasad": "Фасадные Профили",
+        "newSystem": "Новая Система",
+        "others": "Другие Продукты",
+        "title": "Наши Продукты",
+        "subtitle": "Высококачественные ПВХ и алюминиевые профили"
+    },
+    "services": {
+        "title": "Наши Услуги",
+        "subtitle": "Мы предлагаем вам услуги полного цикла",
+        "items": {
+            "1": {
+                "title": "Изготовление дверей и рам",
+                "description": "Индивидуальные заказы на основе ваших размеров и требований."
+            },
+            "2": {
+                "title": "Ремонт",
+                "description": "Услуга по ремонту и обновлению старых рам."
+            },
+            "3": {
+                "title": "Замер",
+                "description": "Наши специалисты бесплатно приедут и произведут замеры."
+            },
+            "4": {
+                "title": "Установка",
+                "description": "Качественная услуга установки опытными мастерами."
+            },
+            "5": {
+                "title": "Техническая консультация",
+                "description": "Бесплатная профессиональная консультация по материалам и дизайну."
+            },
+            "6": {
+                "title": "Доставка",
+                "description": "Мы безопасно доставляем готовую продукцию по вашему адресу."
+            }
+        }
     }
 }
