--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -52,5 +52,32 @@
                 "description": "Мы безопасно доставляем готовую продукцию по вашему адресу."
             }
         }
+    },
+    "about": {
+        "miniTitle": "О компании",
+        "title": "О нас",
+        "subtitle": "Компания Mr Romchi уже много лет занимает свое место на рынке, став символом качества и надежности. Наша цель – привнести комфорт и современный вид в каждый дом.",
+        "yearWork": "Годы работы",
+        "clients": "Довольные клиенты",
+        "quality": "Гарантия качества",
+        "time": "Поддержка",
+        "team": "Команда профессионалов"
+    },
+    "customers": {
+        "title": "Наши Клиенты",
+        "subtitle": "Компании, которые нам доверяют"
+    },
+    "contact": {
+        "title": "Бесплатный расчет",
+        "subtitle": "Бесплатный расчет и дизайн услуг для дверей и рам! Оставьте свой номер телефона, мы свяжемся с вами.",
+        "address": "Адрес",
+        "phone": "Телефон",
+        "button": "Отправить"
+    },
+    "footer": {
+        "about": "Качество и надёжность для каждого дома. Наша цель — сделать ваш дом более уютным и красивым.",
+        "copyright": "Mr Romchi. Все права защищены.",
+        "menu": "Меню",
+        "call": "Связаться"
     }
 }
