--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -72,7 +72,8 @@
         "subtitle": "Бесплатный расчет и дизайн услуг для дверей и рам! Оставьте свой номер телефона, мы свяжемся с вами.",
         "address": "Адрес",
         "phone": "Телефон",
-        "button": "Отправить"
+        "button": "Отправить",
+        "successToast": "Спасибо за ваше обращение! Мы свяжемся с вами в ближайшее время."
     },
     "footer": {
         "about": "Качество и надёжность для каждого дома. Наша цель — сделать ваш дом более уютным и красивым.",
