--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -80,5 +80,48 @@
         "copyright": "Mr Romchi. Все права защищены.",
         "menu": "Меню",
         "call": "Связаться"
+    },
+    "productDescription": {
+        "title": "Product Description"
+    },
+    "productDescriptions": {
+        "pvx": {
+            "6000_trio": "Универсальный профиль с оптимальным соотношением цены и качества для вашего дома.",
+            "6000_qvt": "Экономичный, но качественный профиль, экономящий ваш бюджет.",
+            "7000_engelberg": "Один из наших премиум-профилей.",
+            "8000_engelberg": "Премиум-профиль высшего уровня качества."
+        },
+        "alumin": {
+            "aldox": "Доступный и универсальный профиль.",
+            "champion": "Надёжный и долговечный профиль.",
+            "termo_7000": "Прочный профиль, соответствующий современным требованиям.",
+            "termo_5700": "Высокое качество в экономичном исполнении.",
+            "termo_9800": "Толстый и прочный алюминиевый профиль премиум-класса."
+        },
+        "sliding": {
+            "bkx_65": "Очень прочный раздвижной профиль.",
+            "bkx_38": "Экономичный раздвижной профиль."
+        },
+        "fasad": {
+            "bkf_48": "Лучший профиль для наружного фасада.",
+            "bkf_50": "Новый современный, очень прочный профиль.",
+            "pauk_sistema": "Система с уникальным дизайном."
+        },
+        "newSystem": {
+            "rolstavniy": "Современные ворота.",
+            "sekshionniy": "Современные ворота.",
+            "sensor": "Датчик с автоматическим движением.",
+            "gelatina": "Система, соответствующая современным требованиям.",
+            "pergola": "Система, соответствующая современным требованиям.",
+            "markiza": "Система, соответствующая современным требованиям."
+        },
+        "others": {
+            "san_uzel": "Лучшие варианты для вашего дома.",
+            "perila": "Оригинальные ограждения для окон и проёмов.",
+            "podokonnik": "Незаменимая деталь для вашего интерьера.",
+            "moskitnaya_setka": "Необходимое средство защиты на летний сезон.",
+            "peregorodka": "Качественные металлические профили, раскрывающие интерьер вашего дома.",
+            "zimniy_sad": "Лучшее и безопасное решение для закрытой остеклённой зоны."
+        }
     }
 }
