rasm slide description togirlandi

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -117,7 +117,7 @@
         },
         "others": {
             "san_uzel": "Top options for your home.",
-            "perila": "Distinctive guards for windows and openings.",
+            "perila": "Unique partitions made of glass and profiles.",
             "podokonnik": "A must-have detail for your space.",
             "moskitnaya_setka": "An essential protective device for the summer season.",
             "peregorodka": "High-quality metal profiles that open up your interior.",
