--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -117,7 +117,7 @@
         },
         "others": {
             "san_uzel": "Лучшие варианты для вашего дома.",
-            "perila": "Оригинальные ограждения для окон и проёмов.",
+            "perila": "Необычные перегородки из стекла и профилей.",
             "podokonnik": "Незаменимая деталь для вашего интерьера.",
             "moskitnaya_setka": "Необходимое средство защиты на летний сезон.",
             "peregorodka": "Качественные металлические профили, раскрывающие интерьер вашего дома.",
