--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -117,7 +117,7 @@
         },
         "others": {
             "san_uzel": "Uyingiz uchun eng zo'r variantlar.",
-            "perila": "Oyna va proyomlardan o‘zgacha to‘siqlar.",
+            "perila": "Oyna va profillardan o‘zgacha to‘siqlar.",
             "podokonnik": "Xonangiz uchun eng kerakli detal.",
             "moskitnaya_setka": "Yozgi mavsum uchun zaruriy himoya vositasi.",
             "peregorodka": "Uyingiz interyerini ochuvchi sifatli metall profillar.",
